CVS code -

GNU nano 1.9.99pre1 - 2006.08.29
- General:
	- Miscellaneous comment fixes. (DLR)
	- Fix option descriptions.  At least one of the two parts of
	  +LINE,COLUMN must be specified at all times; COLUMN is not the
	  only optional value.  Also, fix wording problems in
	  -O/--morespace and -W/--wordbounds.  Changes to usage(),
	  UPGRADE, nano.1, nanorc.5, rnano.1, nano.texi, and
	  nanorc.sample.in. (DLR)
	- Fix mouse support so that it truly ignores everything except
	  releases and clicks of button 1.  Changes to
	  enable_mouse_support() and get_mouseinput(). (DLR)
	- In certain places, call wnoutrefresh(bottomwin) after calling
	  blank_statusbar(), in order to ensure that the statusbar is
	  actually blanked.  Changes to do_help(), do_continue(),
	  handle_sigwinch(), and update_statusbar_line(). (DLR)
	- If the mark isn't on, allow Meta-} and Meta-{ to indent and
	  unindent only the current line, just as it would if the mark
	  covered only the current line, instead of displaying a
	  statusbar message and quitting.  Changes to shortcut_init(),
	  do_indent_marked() (renamed do_indent()),
	  do_indent_marked_void() (renamed do_indent_void()),
	  do_unindent_marked_void() (renamed do_unindent()), and
	  UPGRADE. (DLR, suggested by John M. Gabriele)
	- Consolidate do_scroll_(up|down)() into do_(up|down)(), as
	  they have a lot of duplicate code.  New functions do_up_void()
	  and do_down_void(); changes to shortcut_init(), do_up(),
	  do_scroll_up(), do_down(), do_scroll_down(), do_left(), and
	  do_right(). (DLR)
	- Make Jordi's email address, and the description of what the
	  manual pages were written for, consistent in the
	  documentation.  Changes to AUTHORS, nano.1, nanorc.5, and
	  rnano.1. (DLR, based on suggestions by Jordi)
	- Don't include sys/ioctl.h in nano.c when NANO_TINY is defined,
	  as ioctl() is never used then. (DLR)
	- Improve the display of bools in debugging statements.  Changes